<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:textDirection="rtl"
    tools:context=".AddSalesActivity">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#02574a"
        android:padding="10dp"
        android:text="@string/text_salesman_data"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinnerSalesmen"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:spinnerMode="dropdown"
        android:textDirection="rtl" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:textDirection="rtl">

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:textDirection="rtl"
            tools:ignore="RtlSymmetry">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text_salesman_id_label"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text_name_label"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblHiringDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text_hiring_date_label"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtHiringDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textSize="15sp" />
            </TableRow>

        </TableLayout>

        <ImageView
            android:id="@+id/imgSalesman"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:src="@android:drawable/sym_def_app_icon"
            tools:ignore="ContentDescription,RtlSymmetry" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#02574a"
        android:padding="10dp"
        android:text="@string/text_sale_details"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinnerRegions"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:spinnerMode="dropdown"
        android:textDirection="rtl" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textDirection="rtl">

        <EditText
            android:id="@+id/txtAmount"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/text_amount_s_p"
            android:inputType="number"

            android:layoutDirection="rtl"
            android:textDirection="rtl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSalesmen"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/txtSaleDate"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="@string/text_operation_date"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAmount"
            tools:ignore="Autofill,TextFields" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:background="#02574a"
        android:text="@string/text_save"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
</LinearLayout>
