<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context=".CommissionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textDirection="rtl"
        tools:context=".SalesActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#02574a"
            android:padding="10dp"
            android:text="@string/text_search_criteria"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinnerSalesmen"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            android:textDirection="rtl" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textDirection="rtl">

            <Spinner
                android:id="@+id/spinnerMonths"
                style="@style/spinner_style"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:layoutDirection="rtl"
                android:spinnerMode="dropdown"
                android:textDirection="rtl" />

            <Spinner
                android:id="@+id/spinnerYears"
                style="@style/spinner_style"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:layoutDirection="rtl"
                android:spinnerMode="dropdown"
                android:textDirection="rtl" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="#02574a"
            android:text="@string/text_search"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#02574a"
            android:padding="10dp"
            android:text="@string/text_personal_information"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textDirection="rtl">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:paddingEnd="15dp"
                android:textDirection="rtl"
                tools:ignore="RtlSymmetry">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/text_salesman_id_label"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/text_name_label"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lblHiringDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/text_registering_date_label"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtHiringDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="5"
                        android:gravity="start"
                        android:textSize="18sp" />
                </TableRow>
            </TableLayout>

            <ImageView
                android:id="@+id/imgSalesman"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/text_salesman_data"
                android:paddingStart="10dp"
                android:src="@android:drawable/sym_def_app_icon"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblSalesAndCommissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#02574a"
            android:padding="10dp"
            android:text="@string/text_commission_details_label"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="15dp"
            android:textDirection="rtl"
            tools:ignore="RtlSymmetry">

            <TableRow>

                <TextView
                    android:id="@+id/lblYear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="2"
                    android:text="@string/text_year_label"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtYear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="3"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lblMonth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="2"
                    android:text="@string/text_month_label"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtMonth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="3"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tableRegionsCommissions"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:stretchColumns="*"
            android:textAlignment="center"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</ScrollView>
